sign-in api route

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB  = 'mongodb+srv://datnguyendinh1311:NYHEJnUPiinI4cQG@mern.c1wyq.mongodb.net/mern-auth?retryWrites=true&w=majority&appName=mern'
+JWT_SECRET = 'kutsuaka'
