--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-MONGODB  = 'mongodb+srv://datnguyendinh1311:NYHEJnUPiinI4cQG@mern.c1wyq.mongodb.net/mern-auth?retryWrites=true&w=majority&appName=mern'
+MONGODB  = 'mongodb+srv://dev:zbbanXSqSuiF4kNo@real-estate.hxm6u.mongodb.net/?retryWrites=true&w=majority&appName=real-estate'
 JWT_SECRET = 'kutsuaka'
+MONGO_USERNAME = 'dev'
+MONGO_PASSWORD = 'zbbanXSqSuiF4kNo'
